# AndroidPatchUpdate

./: .gitignore  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  bspatch.h  log.h  patcher.c
app/src/main/java/alexclin/apkpatch/: MainActivity.java
app/src/main/java/com/dodola/patcher/utils/: ApkInfoTool.java  AppUtils.java  PromptManager.java
app/src/main/res/layout/: activity_main.xml
